--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MVVM App</string>
+    <string name="category_error">Error happened while fetching data!</string>
+    <string name="retry">Retry</string>
 </resources>
